Fix: excessive padding and align hamburger

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -51,10 +51,6 @@
           margin: 0 10px;
           height: 30px;
       }
-
-      @include media-breakpoint-up(xl) {
-        padding-left: 15px;
-    }
   }
 
   .nav-link {
@@ -65,14 +61,7 @@
   .navbar-nav {
       white-space: nowrap;
   }
-
-  @include media-breakpoint-up(xl) {
-    .td-navbar-nav-scroll {
-        padding-right: 15px;
-      }
-    }
   
-
   @include media-breakpoint-down(lg) {
       padding-inline: 1rem;
 
