--- a/assets/scss/_sidebar-tree.scss
+++ b/assets/scss/_sidebar-tree.scss
@@ -117,9 +117,11 @@
 
 
   &__toggle {
+    margin: 0;
+    margin-left: 1rem;
+    padding: 1rem 0rem;
     line-height: 1;
     color: $gray-900;
-    margin: 1rem;
   }
 
   &__inner {
